[package]
name = "TerminalMessages"
version = "0.0.1"
edition = "2021"

[lib]
name = "TerminalMessages"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.80"

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-s"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-s"]

# cargo build --target x86_64-pc-windows-gnu --release
# cargo build --target x86_64-unknown-linux-gnu --release
